CHANGES

release 81.1
 - extended samplesheet contains only the Data section, Illumina
   on-instrument reference paths removed
 - factor out parsing database configuration files into a separate
   module
 - when using MySQL database in testing, do not use database configuration
   files implicitly from the user's home directory; force the caller to
   supply the location of the file
 - remove default repository root from npg::samplesheet
 - no longer stop runs without batch id or with 13-digit entries in the
   batch id field from moving from run mirrored to analysis pending (
   allows automatic analysis of GCLP and QC runs reespectively).
 - optionally change group ownership of certain analysis directories on
   moving runfolder form incoming to analysis

release 81.0
 - remove default config file
 - allow environment variable NPG_REPOSITORY_ROOT to set repository root
 - move config of staging areas and repository into a config file
 - remove vestigial code for dealing with manual qc state
 - remove good_bad column in run_lane table
 - remove manual_qc_status table
 - npg daemon 'local' host option avoids ssh

release 80.11
 - removed staging area sf48

release 80.10
 - default to in-memory option for SQLite in tests
 - added a method to transparently return live or dev LIMs base URL
 - reference genome values - trim white space

release 80.9
 - do not try to infer phix reference from library/sample name
 - correct regular expression for modern MiSeq reagent kits - previously
   part of the id starting from teh dash was not returned by the flowcel_id accessor
   in the short_info role
 - samplesheet generation: library id shoudl be defined for all samples

release 80.8
 - fix memory leak in the samplesheet driver for st::api::lims -
   pass data hash by reference

release 80.7
 - change reference repository host

release 80.6
 - reenable and clean up cBot monitoring
 - try to avoid recursion in st::api::lims
 - cope with no reference genome info in XML